2005-11-06  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed. We not returning NULL upon search failure.
	  sound was broken.

	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename):

2005-11-06  Bruno coudoin  <bruno.coudoin@free.fr>

	- Improved mosaic background
	- changed gameutil to search files in 
	  ~/.gcompris/Plugins/boards if a file is not found in the
	  /usr/.../gcompris/boards directory
	
	* boards/images/mosaic_bg.png:
	* src/boards/python/mosaic.py:
	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename):
	* src/gcompris/gcompris.c: (init_background), (gcompris_exit),
	(gcompris_init):
	* src/gcompris/properties.c: (gcompris_properties_new):
	* src/gcompris/properties.h:

2005-11-05  Yves Combe  <yves@ycombe.net>

	fix double free.
	fix melody to wait intro finished before start.

	* src/boards/memory.c:
	* src/boards/py-mod-sound.c: (pyGcomprisSoundCallback):
	* src/boards/python/melody.py:

2005-11-05  Yves Combe  <yves@ycombe.net>

	add gcompris_play_ogg_cb function, to get called when sound is finished. Yet a double free in melody.

	* src/boards/click_on_letter.c: (repeat), (config_stop),
	(sound_played):
	* src/boards/py-mod-sound.c: (pyGcomprisSoundCallback),
	(py_gcompris_play_ogg_cb):
	* src/boards/python/melody.py:
	* src/gcompris/gcompris-marshal.list:
	* src/gcompris/soundutil.c: (initSound), (thread_play_ogg),
	(gcompris_play_ogg_cb), (gcompris_sound_callback),
	(gcompris_sound_instance_init),
	(default_sound_played_signal_handler), (gcompris_sound_class_init),
	(gcompris_sound_get_type):
	* src/gcompris/soundutil.h:

2005-11-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Completed the mosaic activity.
	
	* boards/boardicons/guessnumber.png:
	* boards/boardicons/mosaic.png:
	* boards/images/mosaic_bg.png:
	* boards/mosaic.xml.in:
	* configure.in:
	* src/boards/python/mosaic.py:
	* src/gcompris/gcompris.c: (gcompris_exit): Do not call xrandr if our pointer it's no more there. Strange I hot this case.
