@@ -1,3 +1,10 @@
+2005-11-06  Yves Combe  <yves@ycombe.net>
+
+	use Quark internal string in g_hash. fix double free.
+
+	* src/boards/memory.c: (get_random_token):
+	* src/gcompris/soundutil.c: (gcompris_play_ogg_cb):
+
 2005-11-06  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Fixed. We not returning NULL upon search failure.
